--- a/TODO
+++ b/TODO
@@ -578,7 +578,7 @@ documentation:
   - sfidl-manual.texi: complete the documentation
  - bsewavetool needs to be documented with documentation tool on code level (gsl_data_find_loop*)
 
-FEATURE-EXTRACT/-COMPARE:
+bsefcompare:
 - base frequency feature
 
 Misc Buglets/Feature Requests:
@@ -595,5 +595,6 @@ Misc Buglets/Feature Requests:
  - create a roadmap document for BEAST
  - documentation itemize bullets are ugly (need space after bullet)
  - documentation itemize need indent
+ - implement fractional resampler (oversampling)
 
 vim:set ts=8 sts=2 sw=2:
