--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jan 24 22:59:12 2005  Tim Janik  <timj@gtk.org>
+
+	* bseloader-guspatch.cc (fread_dword): fixed error codes and mixed case
+	function names.
+
 Mon Jan 24 22:49:16 2005  Tim Janik  <timj@gtk.org>
 
 	* bseloader-guspatch.cc: fixed function linkage and missing newlines.
