--- a/TODO
+++ b/TODO
@@ -1,4 +1,11 @@
 FIXME(urgent):
+- GusPatch: fix loader magic (GF1PATCH100...?)
+- PianoRoll: fix start position when hzooming
+- TrackRoll: SynthesizerPopup: loading an invalid wave file pops up an unaccassible message dialog (due to a modal popup dialog)
+- TrackRoll: display onky basename of wave files
+- WaveList: list items with basname first, add a field for full pathname
+- automatically change project name to basename fo saved file name
+- check instrument assignment, this often works only atthe second selection (from synth selection dialog)
 - don't save BseWave xinfos if they are NULL
 - add stock icons for Select/None Select/All Select/Invert
 - add a "Creating Skins" section to the beast manual page
@@ -14,7 +21,7 @@ FIXME(urgent):
 - skip and retrigger updates for scope visibility changes
 - add midi control numbers to midi control enum values as tooltips
 - implement display of Note properties next to frequency properties (and nuke note properties from plugins)
-- MIDI-import: ensure mixer and track setup for songs created via MIDI import
+- MIDI-import: ensure mixer busses and tracks are setup for songs created via MIDI import
 - MIDI-import: accept zero-duration notes from God_Is_A_DJ.mid
 - use __thread to speed up sfi_thread_self(). configure test:
   http://cvs.sourceforge.net/viewcvs.py/firebird/firebird2/configure.in?rev=1.205
