--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan 25 00:51:29 2005  Tim Janik  <timj@gtk.org>
+
+	* bsewave.c (bse_wave_store_private): don't store empty xinfos.
+
 Mon Jan 24 22:59:12 2005  Tim Janik  <timj@gtk.org>
 
 	* bseloader-guspatch.cc (fread_dword): fixed error codes and mixed case
