--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jan 29 01:00:37 2005  Tim Janik  <timj@gtk.org>
+
+	* bseloader-guspatch.cc (bse_init_loader_gus_patch): changed magic to
+	match v1.0 and v1.1 directly.
+
 Tue Jan 25 00:51:29 2005  Tim Janik  <timj@gtk.org>
 
 	* bsewave.c (bse_wave_store_private): don't store empty xinfos.
