--- a/TODO
+++ b/TODO
@@ -1,4 +1,12 @@
 FIXME(urgent):
+- fix BseMixer sync behaviour across saving
+- pianoroll: close pianoroll window in response to part::release  
+- skip and retrigger updates for scope visibility changes
+- MIDI-import: ensure mixer busses and tracks are setup for songs created via MIDI import
+- MIDI-import: accept zero-duration notes from God_Is_A_DJ.mid
+- play + play doesn't reset wave oscillator state
+- start playback at play pointer position
+- add extra path handling for freepats packages
 - TrackRoll: display only basename of wave files
 - WaveList: list items with basname in first col, add a col for full pathname
 - automatically change project name to basename fo saved file name
@@ -6,25 +14,17 @@ FIXME(urgent):
 - add a "Creating Skins" section to the beast manual page
 - bsewavetool: fix per-command docu to properly account for input.bsewave
 - install bsewavetool, bsewavetool.1
-- gslloader-pat.cc -> bseloader-guspatch.cc && bse_init_loader_gus_patch()
-- play + play doesn't reset wave oscillator state
-- pianoroll: close pianoroll window in response to part::release  
-- start playback at play pointer position
 - add shift-up/shift-down buttons to piano roll to pitch up/dopwn the selected notes
 - sfidl --client: generate: extern "C" ifdef's, include sfi/sfi.h
 - provide config-parameter (by engine) which provides 16kHz limit listening-threshold used implicitely in osc-code etc. (important for 48K,84K)
-- skip and retrigger updates for scope visibility changes
 - add midi control numbers to midi control enum values as tooltips
 - implement display of Note properties next to frequency properties (and nuke note properties from plugins)
-- MIDI-import: ensure mixer busses and tracks are setup for songs created via MIDI import
-- MIDI-import: accept zero-duration notes from God_Is_A_DJ.mid
 - use __thread to speed up sfi_thread_self(). configure test:
   http://cvs.sourceforge.net/viewcvs.py/firebird/firebird2/configure.in?rev=1.205
   compiler support and missing libc support will fail on accessing a __thread variable
 - add Left and Right channels to BseAmplifier to allow stereo amplification
 - add http://tap-plugins.sourceforge.net/ladspa/sigmoid.html to BseStandardSaturation
 - registering the same script function twice triggers GType assertion
-- add extra path handling for freepats packages
 TODO:
 - TrackRoll: support shift/ctrl/alt modifier to copy/link/move parts
 - TrackRoll: disallow instrument field editing or dialog box during playback (simply gdk_beep())
