--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sat Feb  5 14:46:13 2005  Tim Janik  <timj@gtk.org>
+
+	* bseloader-guspatch.cc: disabled gus-patch specific xinfos, so gus 
+	patch files are currently treated like ordinary samples.
+
 Sat Jan 29 16:58:38 2005  Tim Janik  <timj@gtk.org>
 
 	* bsesequencer.cc: work around compiler/linker bugs on SuSE 9.2.
