--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-15  David Lodge  <dave@cirt.net>
+
+	* en_GB.po: Update English (British) translation.
+
 2005-01-28  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
