--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Mar  6 23:30:36 2005  Tim Janik  <timj@gtk.org>
+
+	* acbeast.m4: use $(tput cols) to figure terminal width instead of 
+	ncurses, suggested by Thomas Dickey <dickey@saltmine.radix.net>.
+
 Sat Feb  5 15:34:50 2005  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstapp.c: permit creation of a single song only through
