--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Mon Mar  7 07:55:46 2005  Tim Janik  <timj@gtk.org>
+
+        * removed obsolete .h C++ headers.
+
+	* adapted sources to compile against .hh C++ headers.
+
 Tue Mar  1 15:24:23 2005  Tim Janik  <timj@gtk.org>
 
 	* bsemidievent.c (bse_midi_signal_default): fixed wrong division for
