--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar  7 09:25:01 2005  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstinstrumentview.h: 
+	* beast-gtk/bstinstrumentview.c: removed outdated files.
+
 Mon Mar  7 08:47:58 2005  Tim Janik  <timj@gtk.org>
 
 	* *: changed references to former C++ .h headers to .hh.
