--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-01  Steve Murphy  <murf@e-tools.com>
+
+        * configure.in: Added "rw" to ALL_LINGUAS.
+
 Mon Mar  7 09:25:01 2005  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstinstrumentview.h: 
