--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,7 @@
+Mon Apr 11 00:49:40 2005  Tim Janik  <timj@gtk.org>
+
+	* sfi/sfiustore.c: fixed data pointer in sfi_ppool_foreach().
+
 Mon Mar  7 07:32:03 2005  Tim Janik  <timj@gtk.org>
 
 	* removed obsolete .h C++ headers.
